--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express-handlebars": "^3.0.0",
     "json-server": "^0.9.2",
+    "mongoose": "^4.7.1",
     "nodemon": "^1.11.0"
   }
 }
