--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
     "json-server": "^0.9.2",
+    "method-override": "^2.3.7",
     "mongoose": "^4.7.1",
     "nodemon": "^1.11.0"
   }
