--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.9",
-    "angular-ui-router": "^0.3.2",
+    "angular": "1.5.9",
+    "angular-ui-rtypscript Cannot find name 'angular'outer": "^0.3.2",
     "bootstrap": "^3.3.7"
   }
 }
