--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/angular": "^1.5.21",
+    "@types/angular-ui-router": "^1.1.35",
     "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
     "express-handlebars": "^3.0.0",
