--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "connect-flash": "^0.1.1",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
+    "fs-extra": "^1.0.0",
     "json-server": "^0.9.2",
     "method-override": "^2.3.7",
     "mongoose": "^4.7.1",
+    "multer": "^1.2.1",
     "nodemon": "^1.11.0",
     "sendgrid": "^4.7.1"
   }
